# clinicalagent

./: LEARNING_GUIDE.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.github/workflows/: agent.yml
examples/: clinicalagent-config.yaml  simple.py
src/clinicalagent/: __init__.py  agent.py  environment.py  history_utils.py  llm.py  settings.py  types.py  utils.py
tests/: test_agent.py  test_environment.py  test_history_utils.py  test_llm.py  test_settings.py  test_types.py  test_utils.py
